--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2004-10-30  Boekemeier  <jost2345@intern>
 
+	* server/natJavaBridge.c (java_bridge_main_gcj): Correct typo.
+	
 	* server/natcJavaBridge.java (readChunks, read): New functions
 	(load): Use these to work around a bug in GNU java
 
