--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,30 @@
+2004-11-18  Jost Boekemeier  <jostb@intern>
+
+	* README: Removed sections about Sun's JSR 223 and outdated notes
+	from Sam Ruby.
+
+	* VERSION, php-java-bridge.spec: Version 1.1.0
+
+	True try/catch handling.
+	* client.c, server/natcJavaBridge.c, server/JavaBridge.java: Pass
+	jthrowable to client.
+	* client.c (setResultFromException): New method
+	(setException): Call setResultFromException with the jthrowable object
+
+	New class: java_exception
+	* java.c, php_java.h (php_java_exception_class_entry): New variable
+	* java.c (PHP_MINIT_FUNCTION): New class
+	
+	Display java objects
+	* java.c (java_class_functions): New entry
+	(java__tostring): New function
+
+	* java_bridge.c (checkError): Disable for PHP5
+
+	* tests.php5/exception.php: Rewritten
+
+	* tests.php5/printStackTrace.php: New file
+	
 2004-11-16  Jost Boekemeier  <jostb@intern>
 	
 	PHP 5 supported
@@ -15,7 +42,7 @@
 	* client.c (swrite, sread, id): removed
 	* proxyenv.c (java_swrite, java_sread, java_id): new from client.c
 
-	client.c (CFG_JAVA_SOCKET_INET): Fixed typo
+	* client.c (CFG_JAVA_SOCKET_INET): Fixed typo
 
 	The PHP 5 object system revealed a bug in the core protocol: If
 	someone managed to send a PHP array with an PHP OBJ type in it, the
