--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,24 @@
+2004-11-26  Jost Boekemeier  <jostb@intern>
+
+	* php-java-bridge: use sh to start the sub-process so that only
+	one "php-java-bridge" process appears in the process list.
+
+	* java.c, php_java.h (php_java_handlers, create_object, cast): New
+	functions/globals for PHP 5.
+	* tests.php5/toString.php: New test
+
+	* server/JavaBridge.java (getPhpMap): correct documentation.
+
+	* server/natcJava.c, server/JavaBridge.java, client.c
+	(nextElement, hashUpdate, hashIndexUpdate, setResultFromArray):
+	Replaced by the new PHP 5 iterator and array interfaces. -- These
+	functions should have never been written, they copied entire
+	arrays or hash tables from java to PHP.  But we have to keep them
+	for PHP 4 for backward compatibility with ext/java.  They even
+	caused trouble in the past, see change log entries from 2004-09-09
+	and 2004-09-19, where we had to correct a problem interited from
+	the original PHP 4 ext/java extension.
+	
 2004-11-24  Jost Boekemeier  <jostb@timon.intern>
 
 	* instanceof.php, iteratorInterface.php, arrayInterface.php,
