--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,37 @@
+2004-12-12  Jost Boekemeier  <jostb@intern>
+
+	* tests.m4/java_check_abstract_namespace.m4,
+	tests.m4/java_check_struct_ucred.m4: New tests.
+	
+	* client.c, bind.c, server/natcJavaBridge.c,
+	server/JavaBridge.java, server/acinclude.m4, server/configure.in,
+	config.m4, java.c: Use abstract namespace and struct ucred, if
+	available.  This means that a) the communication channel is no
+	longer visible and b) that only authorised users can connect to
+	the server (checked by the kernel). The user cannot gain higher
+	permissions than the permissions that he/she already has.  This
+	feature works *only* on recent Solaris versions, modern BSD
+	variants and Linux.  It relies on certain features in the thread
+	system and the kernel.
+
+	* server/JavaBridge.java (println): New procedure.
+	(HandleRequests): Log the user ID and the group ID of the user
+	that connects to the PHP/Java Bridge.  
+
+	* tests.m4/function_checks.m4: Check for AF_LOCAL and PF_LOCAL.
+	
+	
+2004-12-05  Jost Boekemeier  <jostb@intern>
+
+	* php-java-bridge 1.0.7 released
+	
+
 2004-12-04  Jost Boekemeier  <jostb@intern>
 
 	* java.c (function_entry): Set the arginfo for __call, __get, __set.
 
 	* php5-crash-in-evaluator-shutdown_workaround.patch: New file.
-	
+
 2004-12-03  Jost Boekemeier  <jostb@intern>
 
 	* server/natcJavaBridge.c (Java_JavaBridge_startNative): Do not
