--- a/README
+++ b/README
@@ -93,9 +93,7 @@ What is the PHP/Java bridge?
   The PHP/Java bridge is a replacement for the ext/java bridge shipped
   with PHP 4.  It is not possible to run the build-in bridge and the
   PHP/Java bridge at the same time.  Since version 1.0.7 the bridge is
-  compatible with the proposed jsr223 (where applicable).  However,
-  instead of writing javaclass() and javaexception, you can use
-  java_class() and java_exception.
+  implements with the proposed jsr223 (where applicable).
 
   The module has been tested on a Mandrake Linux System (Version 9.2),
   on RedHat Enterprise 3, RedHat Fedora Core 1 and 2, Solaris9 (Sparc,
@@ -151,9 +149,10 @@ Build and execution instructions:
           gcc --version        # 3.2.3 or above.
           apachectl -version   # Apache 1.3 or above.
           php-config --version # PHP 4.3.2 or above.
+          make null --version  # GNU make 3.79 or above
 
           phpize && 
-          ./configure --with-java=/opt/IBMJava2-14 --disable-secure-mode &&
+          ./configure --with-java=/opt/IBMJava2-14 &&
           make &&
           su -c "make install"
         
@@ -199,39 +198,16 @@ Build and execution instructions:
    Starting the Java VM as a separate process
    ------------------------------------------
 
-  If you want to test the extension in the web-server, you should enable
+  If you want to run the extension in the web-server, you should enable
   the java.socketname option and start the java VM before you start the
-  web-server.  The java VM can be started either via the
-  "php-java-bridge" script or by typing the following command:
+  web-server.  The java VM can be started with the supplied script. For
+  example with the command:
 
-            JAVA_HOME=<java.java_home> <java.java> \
-                                        -Djava.library.path=<java.libpath>
-                                        -Djava.class.path=<java.classpath> 
-                                        -Djava.awt.headless=true  
-                                        JavaBridge 
-                                        <java.socketname>
-                                        <java.log_level>
-                                        <java.log_file>
+    sh php-java-bridge
 
-  For example in a gnome-terminal type:
-
-            JAVA_HOME=/opt/jdk1.4 $JAVA_HOME/bin/java \
-                    -Djava.library.path=/usr/lib/php4 \
-                    -Djava.class.path  =/usr/lib/php4 \
-                    -Djava.awt.headless=true \
-                     JavaBridge \
-                     /var/run/.php-java-bridge_socket \ 
-                     1 \
-                     "" | tee /var/log/php-java-bridge.log
-
-  If you are unsure how to start the java process, please look at the
-  output of the above phpinfo() command.  One of the last lines shows
-  the command required to start the JVM.  The distribution contains two
-  scripts tested on RedHat Enterprise Linux 3.  They start the JVM based
-  on the information from phpinfo(). The "php-java-bridge" command
-  starts the JVM and the "php-java-bridge.service" can be used on SysV
-  based init systems to automatically start and stop the bridge as a
-  service.
+  The script "php-java-bridge.service" can be used on SysV based init
+  systems to automatically start and stop the bridge as a system
+  service.  Please see the RedHat RPM download for an example.
 
 ------------------------------------
   Using GNU Java
@@ -361,8 +337,8 @@ Build and execution instructions:
 
   3. Delete the java sub-directory from php-4.3.x/ext and replace it
      with our php-java-bridge. Rename ext/php-java-bridge to
-     ext/java.  Edit the file php-4.3.x/ext/java/config.m4 and replace
-     the first 4 lines with these:
+     ext/java.  Update the "sinclude" paths in
+     php-4.3.x/ext/java/config.m4 so that they start with "ext/java/":
 
       sinclude(ext/java/tests.m4/function_checks.m4)
       sinclude(ext/java/tests.m4/java_check_broken_stdio_buffering.m4)
@@ -419,45 +395,6 @@ Build and execution instructions:
      Experimental.
      
   Example: make CFLAGS="-m64"
-
-------------------------------------
-  Recognized configure options
-  ----------------------------
-
-  The top-level configure script recognizes the following options:
-
-  * --enable-secure-mode: Changes the privileges of the
-   request-handling java thread to run with the same permissions that the
-   authentificated user has.  This mode makes it impossible for a local
-   intruder to gain higher privileges by attacking the java VM or the
-   PHP/Java Bridge.  Furthermore the user credentials are checked
-   directly by the kernel and are passed to the server via a secure
-   channel. Thus it is impossible to access the PHP/Java Bridge server
-   without having a valid user account.
-
-   This feature works only on certain operating systems and only with
-   java VM's which support running threads with non-default privileges: 
-   a) the operating system must be able to pass user credentials via a
-   secure channel and b) the java VM must be prepared to deal with
-   user-threads that have changed their user ID and group ID to match the
-   credentials passed by the kernel.  Operating systems which support
-   this are BSD, Solaris and Linux. Java VM's which can handle java
-   threads with reduced permissions are Sun JDK 1.4.2_02 and above and
-   Sun JDK 1.5. 
-
-   Operating systems which do not support this feature are MacOS X,
-   older BSD variants, HP-UX and Linux kernel before version 2.3. Java
-   VM's which crash when thread privileges are changed include IBM JDK
-   1.4.1 and GNU Java (all versions); these VM's crash when the
-   user-threads try to notify their parents by sending a pthread signal,
-   something that doesn't work anymore because the user-threads have the
-   necessary permissions revoked. Default is --disable-secure-mode.
-
-  * --with-java=JAVA_HOME: Use the java VM located in the directory
-    JAVA_HOME/bin.  Default is no java, which means use GNU GCC/GCJ
-    to compile java into native code.  
-
-    Example: ./configure --with-java=/opt/jdk1.5
 
 ------------------------------------
   Log levels
